# anp-open-sdk

./: .env.example  .gitignore  AGENT_CONNECT_ITERATION_REQUIREMENTS.md  ANP-Open-SDK-Python-重构方案.md  ANP_Framework_架构设计论证.md  ANP_Open_SDK_Framework_Core_Design_Blueprint.md  ANP_SDK_自适应接口文档处理总结.md  ANP项目基于自平台化能力的架构拆分完整方案.md  ANP项目架构拆分与技术栈选择方案.md  ANP项目架构拆分方案-面向AI程序员优化版.md  CLAUDE.local.md  CLAUDE.md  FINAL_TEST_SUITE_SUMMARY.md  Memory系统与消息队列对比分析-架构决策.md  Memory系统动态本体集成方案设计讨论记录.md  Memory系统向量搜索Embedding方案技术分析.md  Memory系统在智能体网络中的部署架构方案.md  Memory系统重新架构定位-公共信号量与状态发布点设计.md  PROTOCOL_WRAPPER_TEST_REPORT.md  Python_Agent_Manager_Params_修复方案.md  Python调用Node.js加速的技术实现方案.md  REFACTOR_REPORT.md  anp_differentiation_table.md  anp_open_sdk_framework_demo_agent_9528_unified_config.yaml  anp_open_sdk_framework_demo_agent_unified_config.yaml  check_did_key_consistency.py  check_path.py  claude-code-web-console-tech-spec.md  config_usage_analysis.json  debug_signature.py  debug_signature_trace.py  did_methods_config.yaml  from anp_open_sdk_framework import UnifiedCaller, UnifiedCrawler, MasterAgent  license_header.txt  pyproject.toml  python framework_demo.py --master-mode --task "计算" --method-args '{"a": 1, "b": 2}'  python framework_demo.py --unified-mode --intelligent --target-method "计算方法"  readme.md  result = await caller.search_and_call("demo_method", arg1, arg2)  result = await caller.search_and_call("加法", 1, 2)  (+32 more)
anp_open_sdk/: anp_sdk.py  anp_sdk_agent.py  anp_sdk_user_data.py  anp_user.py  anp_user_tool.py  base_user_data.py  did_tool.py  file_tool.py  pyproject.toml  (+1 more)
(+1120 files in other folders)
